# GhostGPT

./: .gitignore  QUICKSTART.md  README_RU.md  index.html  package-lock.json  package.json  run-ghostgpt.sh  run-phantom.sh  start-production.sh  stop-production.sh
backend/: requirements.txt  server.py
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs
src-tauri/src/commands/: ai.rs  audio.rs  mod.rs  screenshot.rs
src/components/: MessageList.tsx
src/styles/: App.css
